--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shr</title>
+    <title>Intro</title>
     <style>
         body {
             margin: 0;
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="cat.jpeg" alt="图片加载失败">
+    <img src="intro.png" alt="图片加载失败">
 </body>
 </html>
